fix: fixed breaks in about css

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -190,12 +190,10 @@ a {
   justify-content: flex-end;
   align-items: end;
 
-  background: linear-gradient(
-      180deg,
+  background: linear-gradient(180deg,
       rgba(5, 22, 33, 0) 33.08%,
       rgba(5, 22, 33, 0.38) 69.97%,
-      #051621 94.67%
-    ),
+      #051621 94.67%),
     url(/assets/pages/about/others-desktop/about-main.png);
   width: 100%;
   height: 100vh;
@@ -210,6 +208,7 @@ a {
 }
 
 .about-main-page-title {
+  width: 50vw;
   font-family: Rubik;
   font-style: normal;
   font-weight: 900;
@@ -258,7 +257,7 @@ a {
 .heroes-left-text {
   position: absolute;
   left: 13em;
-
+  width: 25em;
   font-family: Rubik;
   font-style: normal;
   font-weight: bold;
@@ -293,7 +292,7 @@ a {
 .heroes-right-text {
   position: absolute;
   right: 12.7em;
-
+  width: 23em;
   font-family: Rubik;
   font-style: normal;
   font-weight: bold;
@@ -308,13 +307,11 @@ a {
 ----------------------------------------------------------------------------------*/
 
 .radiant-container {
-  background: linear-gradient(
-      180deg,
+  background: linear-gradient(180deg,
       #051621 0%,
       rgba(5, 22, 33, 0) 11.98%,
       rgba(5, 22, 33, 0) 88.02%,
-      #051621 100%
-    ),
+      #051621 100%),
     url(/assets/pages/about/about-radiant/radiant-bg.png), #000f1b;
   width: 100%;
   height: 111.5em;
@@ -326,7 +323,7 @@ a {
 }
 
 .radiant-title {
-  width: auto;
+  width: 35em;
   font-family: Rubik;
   font-style: normal;
   font-weight: 900;
@@ -356,12 +353,10 @@ a {
 ----------------------------------------------------------------------------------*/
 
 .dire-container {
-  background: linear-gradient(
-      180deg,
+  background: linear-gradient(180deg,
       #051621 0%,
       rgba(5, 22, 33, 0) 46.88%,
-      #051621 100%
-    ),
+      #051621 100%),
     url(/assets/pages/about/about-dire/dire-bg.png);
   width: 100%;
   height: 111.5em;
@@ -372,7 +367,7 @@ a {
 }
 
 .dire-title {
-  width: auto;
+  width: 35em;
   font-family: Rubik;
   font-style: normal;
   font-weight: 900;
@@ -936,7 +931,7 @@ footer {
     position: static;
     left: 0;
     bottom: 0;
-
+    width: 22em;
     font-family: Rubik;
     font-style: normal;
     font-weight: bold;
@@ -974,7 +969,7 @@ footer {
     position: static;
     left: 0;
     bottom: 0;
-
+    width: 22em;
     font-family: Rubik;
     font-style: normal;
     font-weight: bold;
@@ -988,12 +983,10 @@ footer {
 ----------------------------------------------------------------------------------*/
 
   .radiant-container {
-    background: linear-gradient(
-        180deg,
+    background: linear-gradient(180deg,
         rgba(5, 22, 33, 0) 33.08%,
         rgba(5, 22, 33, 0.38) 69.97%,
-        #051621 94.67%
-      ),
+        #051621 94.67%),
       url(/assets/pages/about/mobile/radiant-bg-mobile.png);
     width: 100vw;
     height: auto;
@@ -1041,12 +1034,10 @@ footer {
 ----------------------------------------------------------------------------------*/
 
   .dire-container {
-    background: linear-gradient(
-        180deg,
+    background: linear-gradient(180deg,
         rgba(5, 22, 33, 0) 33.08%,
         rgba(5, 22, 33, 0.38) 69.97%,
-        #051621 94.67%
-      ),
+        #051621 94.67%),
       url(/assets/pages/about/mobile/dire-bg-mobile.png);
     width: 100%;
     height: auto;
@@ -1336,6 +1327,7 @@ footer {
   .burger-icon {
     width: 1em;
   }
+
   .burger-cross {
     width: 1em;
   }
@@ -1343,9 +1335,11 @@ footer {
   #headset {
     width: 1em;
   }
+
   #globe {
     width: 2em;
   }
+
   #footer-mobile {
     bottom: 0em !important;
     padding: 0em 0em !important;
